portfolio updated with assingment instruction

--- a/assets/css.css
+++ b/assets/css.css
@@ -1,6 +1,6 @@
 
 body{
-    background-image: url( images/bg\ photo.jpg );
+  background-image: url(assets/images/bg-photo.jpg);
   }
 
 .navbar-brand{
