readme file updated

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body{
-background-image: url(assets/images/bg-photo.jpg) !important;
+background-image: url(images/bg-photo.jpg) !important;
 }
 .container {
   margin-bottom: 100px !important;
